scripts/yaml/InstallMinIOS3forBackupTesting.yaml
# Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: minio-namespace
---
# Create Docker
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
  namespace: minio-namespace
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      # Refer to the PVC created earlier
      volumes:
        - name: storage
          persistentVolumeClaim:
            # Name of the PVC created earlier
            claimName: minio-pv-claim
      containers:
        - name: minio
          # Pulls the default Minio image from Docker Hub
          image: minio/minio:latest
          args:
            - server
            - /storage
          ports:
            - containerPort: 9000
              hostPort: 9000
          # Mount the volume into the pod
          volumeMounts:
            - name: storage # must match the volume name, above
              mountPath: "/storage"
---
# Create Service
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-namespace
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
# Create Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "$MINIO_HOSTNAME"
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-service
              servicePort: 9000
